[tool.poetry]
name = "nnets-transformer"
version = "0.1.0"
description = ""
authors = ["liz"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformer-lens = {git = "https://github.com/TransformerLensOrg/TransformerLens"}
transformers = "^4.54.1"
ipywidgets = "^8.1.7"
seaborn = "^0.13.2"
plotly = "^6.2.0"
nbformat = "^5.10.4"
networkx = "^3.5"
pyvis = "^0.3.2"
ipykernel = "^6.30.1"
scipy = "^1.16.1"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
